--- a/work/package.json
+++ b/work/package.json
@@ -12,7 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1",
     "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8"
