--- a/work/package.json
+++ b/work/package.json
@@ -12,8 +12,9 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.2",
+    "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "style-loader": "^0.23.0",
@@ -22,5 +23,9 @@
     "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.8",
     "xml-loader": "^1.2.1"
+  },
+  "dependencies": {
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   }
 }
